feat: update custom field for update option
