# pkg/entities/field_option.go
@@ -5,9 +5,8 @@ import (
 )
 
 type FieldOption struct {
-	ID      string         `json:"id"`
-	Name    *MultiLangText `json:"name"`
-	FieldID string         `json:"field_id"`
+	ID   string         `json:"id"`
+	Name *MultiLangText `json:"name"`
 }
 
 func NewFieldOptinoEntity(option *models.FieldOption) *FieldOption {
@@ -15,9 +14,8 @@ func NewFieldOptinoEntity(option *models.FieldOption) *FieldOption {
 		return &FieldOption{}
 	}
 	return &FieldOption{
-		ID:      option.ID.String(),
-		Name:    NewMultiLangTextEntity(option.Name),
-		FieldID: option.FieldID.String(),
+		ID:   option.ID.String(),
+		Name: NewMultiLangTextEntity(option.Name),
 	}
 }
 
